# parser_logs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  log_analyzer.py  pyproject.toml
.github/workflows/: ci.yml
reports/: report-20180630.html  report-20200630.html  report-20250512.html
src/: parser_file.py  report.py  statistics.py  syslog.py
tests/: test_app.py
